javafx working hopefully