@@ -2,3 +2,11 @@
 ## Group No Hope
 # Purpose 
 Một phần mềm giúp cho sinh viên cải thiện học tập trong các môn thuộc chuyên ngành khoa học máy tính 
+
+VM Arg (copy this and paste to vm arg)
+--module-path
+"F:\2Study\2Nam2\CS\Setups\javafx\javafx-sdk-17.0.0.1\lib"
+--add-modules
+javafx.controls,javafx.fxml,javafx.media,javafx.graphics,javafx.web
+--add-exports
+javafx.base/com.sun.javafx.event=ALL-UNNAMED
